--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
-  font_url: "<link href="https://fonts.googleapis.com/css?family=Almendra+SC|Aref+Ruqaa:400,700"
+  font_url: "https://fonts.googleapis.com/css?family=Almendra+SC|Aref+Ruqaa:400,700"
