--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ theme: jekyll_patternbot
 
 patternbot:
   title: Archaic Records
-  description: A record company
+  description: A small record label that gives up and coming talented musicians a platform to promote their art.
   font_url: "https://use.typekit.net/slb4bkf.css"
