Add description to site

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
+  title: "Flora and Zip"
+  description:
+    Local art print, paintings and cards for sale
   font_url: "https://fonts.googleapis.com/css?family=Aleo|Lato|Open+Sans"
