--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,6 @@ patternbot:
     typefaces.secondary:
       Lato is used as secondary and for all body copy and buttons, including the footer and all other text.
     colors.primary:
-      The primary colour was chosen for its vintage feel and it's contrast for accessibility. The mauve is youthfu;; and appeals to the artistic sensibilties of the demographic.
+      The primary colour was chosen for its vintage feel and it's contrast for accessibility. The mauve is youthful and appeals to the artistic sensibilties of the demographic.
     colors.secondary:
-      The second colour was chosen for it's contrast to the primary colour. They are complementary and it adds a touch of brightness to the colour scheme.
+      The second colour was chosen for it's contrast to the primary colour. They are complementary and it adds a touch of brightness to the colour scheme. The grey is used for text and buttons.
