Add colour to code

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,11 @@ patternbot:
   title: Archaic Records
   description: A small record label that gives up and coming talented musicians a platform to promote their art.
   font_url: "https://use.typekit.net/slb4bkf.css"
+  colors:
+    background: "--color-secondary-light"
+    accent: "--color-primary-dark"
+    patterns:
+      brand.logos: "--color-primary-light"
   rationales:
     typefaces.primary:
       The primary typeface - Century Gothic was chosen because of it's legibility and stylistic values. An easy to read sans serif font for small headers and body copy.
