Add quotation marks to title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 permalink: pretty
 theme: jekyll_patternbot
 patternbot:
-  title: Mythological Creature Market
+  title: "Mythological Creature Market"
   description: An online vendor of fine mythological beasts.
   font_url: "https://fonts.googleapis.com/css?family=Almendra+SC|Aref+Ruqaa:400,700"
   rationales:
