--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,8 @@ patternbot:
     colors.secondary:
       The second colour was chosen for it's contrast to the primary colour. They are complementary and it adds a touch of brightness to the colour scheme. The grey is used for text and buttons.
     colors:
-      background:
-        (--color-secondary)
+      background: "--color-secondary"
+      accent: "--color-primary"
+      patterns:
+        brand.logos:
+          "--color-primary-light"
