--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ patternbot:
     Local Ottawa art prints, paintings and cards for sale
   font_url: "https://fonts.googleapis.com/css?family=Aleo|Lato|Open+Sans"
   colors:
-    background: "--color-secondary"
+    background: "--color-neutral-grey"
     accent: "--color-primary"
     patterns:
         brand.logos: "--color-primary-light"
