--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ patternbot:
   colors:
     accent: "--color-primary"
     patterns:
-        brand.logos: "--color-primary-light"
+        brand.logos: "--color-light-yellow"
   rationales:
     typefaces.primary:
       Aleo is used as a young and fresh, slighly funky and vintage typeface. Used for heading and titles only.
