--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 permalink: pretty
+
 theme: jekyll_patternbot
+
+patternbot:
+  font_url: "https://fonts.google.com/?query=dosis&selection.family=Dosis"
