--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ patternbot:
     An online vendor of fine mythological beasts.
   font_url: "https://fonts.googleapis.com/css?family=Almendra+SC|Aref+Ruqaa:400,700"
   colors:
+    background: "--color-primary-light"
     accent: "--color-accent"
   rationales:
     typefaces.primary: |
