--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 permalink: pretty
-them: jekyll_patternbot
+theme: jekyll_patternbot
+
+patternbot:
+  font_url: "https://fonts.googleapis.com/css?family=Noto+Serif+SC|Open+Sans"
