--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
-  font_url: "https://fonts.googleapis.com/css?family=Noto+Serif+SC|Open+Sans"
+  font_url: "https://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Serif+Pro"
