Remove additional line from code

--- a/_patterns/buttons/config.yml
+++ b/_patterns/buttons/config.yml
@@ -1,5 +1,5 @@
 title: "Buttons"
-description: |
+description:
 Buttons should be used in situations where a dramatic, obvious action is required. Try not to over use buttons because they should be the primary call-to-action for a screen.
 
 patterns:
