--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -1,3 +1,3 @@
 title: "Cards"
-description:
-Cards are used to advertise merchandise, they will appear frequently throughout the site with different images inside them.
+description: |
+  Cards are used to advertise merchandise, they will appear frequently throughout the site with different images inside them.
