Make a multitude of changes to the pattern library

--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -4,6 +4,9 @@ description: |
 
 patterns:
   product-card:
+    title: "product card"
+    description: |
+      hello
     width: 400
 
   sale-card:
