--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -1,9 +1,17 @@
 title: "Cards"
 description: |
-  Buttons are used for definite action such as buying or checking out. They will usually bring user to a different page.
+  This will hold photo of the items, all will be the same size
 
 patterns:
   products:
-    title:
+    title: "Products"
     description: |
-        This will be a crad for items on the site, all the same size.
+        This will be a card for items on the site, all the same size.
+    width: "24em"
+
+  product-info:
+    title: "Product Info"
+    description: |
+        This is the card will all the specific info on the item and a button to buy it.
+    width: "36em"
+    background: "--color-light-grey"
