--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ patternbot:
     accent: "--color-primary-light"
     patterns:
       brand.logos: "--color-secondary-dark"
+      icons.icons: "#efefef"
   rationales:
     typefaces.primary: |
       Open Sans was selected because of its clean and easy readability for web. Open Sans should be used for all body copy and any other applicables areas with large amounts of text.
