Add rationales for all of the patterns

--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ patternbot:
     colors.secondary: |
       The secondary colours represent the stars we see in the sky. It should be used as a the base background colour and on text to contrast against the primary colour.
     colors.accent: |
-      These accents pair well and create a space themed harmony with the primarys. Yellows draw attention and should only be used with pruchasing related items such as the shopping cart icon. Light red should be used with submission related content like search. Blue should only be use as a small foreground elements.
+      These accents pair well and create a space themed harmony with the primarys. Yellows draw attention and should only be used with pruchasing related items such as the shopping cart icon. Light red should be used with submission related content like search. Blue should only be used on small foreground elements.
