--- a/_patterns/forms/config.yml
+++ b/_patterns/forms/config.yml
@@ -55,4 +55,4 @@ patterns:
   alt-search:
     title: "Alternate Search Field"
     description: |
-      This search field is to be used on everypage that is necessary expect that of the homepage—use the Search Field for that. It should always be place in the top bar for easy access and continuity.
+      This search field is to be used on everypage that is necessary expect that of the homepage—use the Search Field for that. It should always be placed in the top bar for easy access and continuity.
