--- a/_patterns/secondary-nav/config.yml
+++ b/_patterns/secondary-nav/config.yml
@@ -3,7 +3,7 @@ description: |
   This will be the secondary navigation for the products.
 
 patterns:
-  nav:
+  secondary-nav:
     title: "secondary navigation"
     description: |
         This will be on the product picture, pictures will change as requested.
